--- a/core/build.gradle
+++ b/core/build.gradle
@@ -5,6 +5,8 @@ plugins {
     id 'kotlin-parcelize'
 }
 
+apply from: '../shared_dependencies.gradle'
+
 android {
     namespace 'id.co.egiwibowo.core'
     compileSdk 33
@@ -33,32 +35,6 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.paging:paging-common-ktx:3.1.1'
-
-
-//    def kotlin_version = "1.9.0"
-    def room_version = "2.5.0"
-    def retrofit_version = "2.9.0"
-    def logging_interceptor_version = "4.9.0"
-
-    def kotlin_coroutines_version = "1.6.4"
-    def lifecycle_version = "2.5.1"
-
-    def activity_ktx_version = "1.6.1"
-    def fragment_ktx_version = '1.5.5'
-
-    def hilt_version = '2.44'
-    def hilt_jetpack_version = '1.0.0-alpha03'
-
-    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-
-//    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.7.20"
 
     //room
     api "androidx.room:room-runtime:$room_version"
@@ -76,14 +52,10 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutines_version"
     implementation "androidx.room:room-ktx:$room_version"
 
+    //paging
+    implementation "androidx.paging:paging-common-ktx:$paging_version"
+
     api "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     api "androidx.activity:activity-ktx:$activity_ktx_version"
     api "androidx.fragment:fragment-ktx:$fragment_ktx_version"
-
-    //dagger
-    implementation "com.google.dagger:hilt-android:$hilt_version"
-    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
-//    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_jetpack_version"
-    kapt "androidx.hilt:hilt-compiler:$hilt_jetpack_version"
-    kaptAndroidTest "androidx.hilt:hilt-compiler:$hilt_jetpack_version"
 }
