--- a/favorite/build.gradle
+++ b/favorite/build.gradle
@@ -5,6 +5,9 @@ plugins {
     id 'kotlin-parcelize'
     id 'dagger.hilt.android.plugin'
 }
+
+apply from: '../shared_dependencies.gradle'
+
 android {
     namespace 'id.co.egiwibowo.favorite'
     compileSdk 33
@@ -40,71 +43,37 @@ android {
 
 dependencies {
     implementation project(":app")
-    implementation "androidx.navigation:navigation-compose:2.5.3"
-    def hilt_version = '2.44'
-    def hilt_jetpack_version = '1.0.0-alpha03'
-
-    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-
-//    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.7.20"
-
     implementation project(":core")
 
-    //dagger
-    implementation "com.google.dagger:hilt-android:$hilt_version"
-    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
-//    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_jetpack_version"
-    kapt "androidx.hilt:hilt-compiler:$hilt_jetpack_version"
-    kaptAndroidTest "androidx.hilt:hilt-compiler:$hilt_jetpack_version"
+    implementation "com.google.android.play:core-ktx:$play_core_version"
 
     def composeBom = platform('androidx.compose:compose-bom:2022.12.00')
     implementation composeBom
     androidTestImplementation composeBom
 
-    // Choose one of the following:
     // Material Design 3
     implementation 'androidx.compose.material3:material3'
-
     // Android Studio Preview support
     implementation 'androidx.compose.ui:ui-tooling-preview'
     debugImplementation 'androidx.compose.ui:ui-tooling'
-
     // UI Tests
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
-
-    // Optional - Included automatically by material, only add when you need
-    // the icons but not the material library (e.g. when using Material3 or a
-    // custom design system based on Foundation)
-//    implementation 'androidx.compose.material:material-icons-core'
-    // Optional - Add full set of material icons
+    // Material icons
     implementation 'androidx.compose.material:material-icons-extended'
-    // Optional - Add window size utils
+    // Add window size utils
     implementation 'androidx.compose.material3:material3-window-size-class'
-
-    // Optional - Integration with activities
+    // Integration with activities
     implementation 'androidx.activity:activity-compose:1.6.1'
-    // Optional - Integration with ViewModels
+    // Integration with ViewModels
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
-    // Optional - Integration with LiveData
+    // Integration with LiveData
     implementation 'androidx.compose.runtime:runtime-livedata'
-    // Optional - Integration with RxJava
-//    implementation 'androidx.compose.runtime:runtime-rxjava2'
 
-    implementation "androidx.hilt:hilt-navigation-compose:1.1.0-alpha01"
+    implementation "io.coil-kt:coil-compose:$coil_compose_version"
+    implementation "com.google.accompanist:accompanist-placeholder-material:$placeholder_compose_version"
 
-    implementation("io.coil-kt:coil-compose:2.2.2")
-
-    // If you're using Material, use accompanist-placeholder-material
-    implementation "com.google.accompanist:accompanist-placeholder-material:0.29.1-alpha"
-
-    implementation "androidx.paging:paging-runtime-ktx:3.1.1"
-    implementation "androidx.paging:paging-compose:1.0.0-alpha18"
+    //paging
+    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
+    implementation "androidx.paging:paging-compose:$paging_compose_version"
 }
