--- a/shared_dependencies.gradle
+++ b/shared_dependencies.gradle
@@ -1,18 +1,19 @@
 dependencies {
     implementation "androidx.appcompat:appcompat:$appcompat_version"
-//    implementation "androidx.core:core-ktx:$core_ktx_version"
-//    implementation "androidx.constraintlayout:constraintlayout:$constraint_version"
-//    implementation "androidx.legacy:legacy-support-v4:$legacy_support_version"
+    implementation "androidx.core:core-ktx:$core_ktx_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "com.google.android.material:material:$material_version"
+
+    //junit
     testImplementation "junit:junit:$junit_version"
     androidTestImplementation "androidx.test.ext:junit:$androidx_junit_version"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
-    implementation "androidx.multidex:multidex:$multidex_version"
 
+    implementation "androidx.multidex:multidex:$multidex_version"
 
     //dagger
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_jetpack_version"
     kapt "androidx.hilt:hilt-compiler:$hilt_jetpack_version"
     kaptAndroidTest "androidx.hilt:hilt-compiler:$hilt_jetpack_version"
 }
